Fixed change pass to work dynamically

--- a/templates/forgot-password.html
+++ b/templates/forgot-password.html
@@ -25,7 +25,7 @@
       >
        <img src="../static/css/img/logo.png" alt="Logo" class="logo-forgotpassword" />
         <h1 class="welcoming-title">Forgot Password</h1>
-        <form class="form" autocomplete="off" action="/otp.html">
+        <form id="get-email-form" class="form" autocomplete="off">
           <p class="forgot-password-reminder">
                 Enter your email address and we will send you a link to reset your
                 password.</p>
@@ -47,5 +47,7 @@
       <!-- right side -->
       <div class="right-column"></div>
     </div>
+    <!-- JavaScript -->
+    <script src="../static/css/js/login.js"></script>
   </body>
 </html>
